# test

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  absolute_return_focused_evaluation.py  actual_rankings_20230621.csv  alpha_amplification_simple.py  alpha_amplification_strategy.py  analyze_actual_rankings_20230621.py  analyze_backtest_parameters.py  analyze_best_performance.py  analyze_comparison.py  analyze_conservative_changes_impact.py  analyze_cumulative_performance.py  analyze_data_discrepancy.py  analyze_dynamic_period_results.py  analyze_final_performance.py  analyze_holding_days_issue.py  analyze_monthly_returns.py  analyze_period_difference.py  analyze_practical_issues.py  analyze_ranking_difference.py  analyze_ranking_stocks.py  analyze_topk20_change_impact.py  analyze_track_a_b_performance_updated.py  analyze_unified_parameters.py  apply_recalculated_features.py  benchmark_data_validator.py  calculate_benchmark_comparison.py  calculate_topk_hit_ratio.py  calculate_topk_hit_ratio_dev_holdout.py  calculate_total_returns_from_cagr.py  check_actual_backtest.py  check_backtest_period.py  check_cv_folds.py  check_data_columns.py  check_existing_data.py  check_hit_ratio_period.py  (+125 more)
configs/: config.yaml  config_backup_collect.yaml  config_baseline2.yaml  config_baseline2_backup.yaml  feature_groups.yaml  feature_groups_long.yaml  feature_groups_long_optimized_grid_20260108_140020.yaml  feature_groups_long_optimized_grid_20260108_140126.yaml  feature_groups_long_optimized_grid_20260108_142248.yaml  feature_groups_long_optimized_grid_20260108_144247.yaml  feature_groups_long_optimized_grid_20260108_145118.yaml  feature_groups_short.yaml  feature_groups_short_optimized_grid_20260108_104332.yaml  feature_groups_short_optimized_grid_20260108_112011.yaml  feature_groups_short_optimized_grid_20260108_121139.yaml  feature_groups_short_optimized_grid_20260108_121838.yaml  feature_groups_short_optimized_grid_20260108_130836.yaml  feature_groups_short_optimized_grid_20260108_135117.yaml  feature_groups_short_optimized_grid_20260108_173603.yaml  feature_weights_long_ic_optimized.yaml  feature_weights_long_rf_20260108_184649.yaml  feature_weights_long_rf_20260108_201454.yaml  feature_weights_long_rf_20260108_204254.yaml  feature_weights_long_xgboost_20260108_173210.yaml  feature_weights_long_xgboost_20260108_174226.yaml  feature_weights_long_xgboost_20260108_183513.yaml  feature_weights_long_xgboost_20260108_185557.yaml  feature_weights_short_hitratio_optimized.yaml  feature_weights_short_ic_optimized.yaml  feature_weights_short_rf_20260108_184632.yaml  feature_weights_short_rf_20260108_201440.yaml  feature_weights_short_rf_20260108_204232.yaml  feature_weights_short_ridge_20260108_142619.yaml  feature_weights_short_ridge_20260108_142646.yaml  feature_weights_short_ridge_20260108_142736.yaml  feature_weights_short_ridge_20260108_142811.yaml  feature_weights_short_ridge_20260108_142833.yaml  feature_weights_short_ridge_20260108_143108.yaml  feature_weights_short_ridge_20260108_143153.yaml  feature_weights_short_ridge_20260108_143248.yaml  (+30 more)
data/: all_unknown_stocks_for_hardcoding.csv  backtest_long_strategy_results.csv  backtest_performance_metrics.csv  backtest_short_strategy_results.csv  combined_performance_metrics.csv  combined_performance_metrics.parquet  cumulative_excess_returns.csv  daily_all_business_days_long_ranking_top20.csv  daily_all_business_days_long_ranking_top20.parquet  daily_all_business_days_short_ranking_top20.csv  (+87 more)
(+642 files in other folders)
